--- a/source/style.css
+++ b/source/style.css
@@ -67,6 +67,15 @@ main section {
   padding: 50px;
 }
 
+main section.section-1,
+main section.section-3 {
+  background: rgb(255, 255, 255);
+}
+
+main section.section-2 {
+  background-color: rgb(48, 48, 50);
+}
+
 main h2 {
   color: rgba(0, 0, 0, 0.7);
   font-size: 36px;
@@ -76,13 +85,10 @@ main h2 {
   text-transform: uppercase;
 }
 
-main section.section-1,
-main section.section-3 {
-  background: rgb(255, 255, 255);
-}
-
-main section.section-2 {
-  background-color: rgb(48, 48, 50);
+main h3 {
+  color: rgb(0, 0, 0);
+  font-size: 18px;
+  font-weight: 700;
 }
 
 .main-grid-1 {
@@ -153,6 +159,7 @@ div.footer-grid div {
   .main-grid-1 {
     grid-template-columns: 1fr;
     grid-column-gap: 0;
+    margin: 0 auto;
   }
 }
 
@@ -181,7 +188,11 @@ div.footer-grid div {
   }
 
   .main-grid-1 {
-    padding: 20px 50px;
+    padding: 20px 40px;
+  }
+
+  .main-grid-1 p {
+    margin-bottom: 0;
   }
 
   footer {
@@ -190,6 +201,12 @@ div.footer-grid div {
 
   div.footer-grid {
     grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 650px) {
+  .main-grid-1 img {
+    max-width: 350px;
   }
 }
 
@@ -213,6 +230,7 @@ div.footer-grid div {
   }
 
   .main-grid-1 h3 {
+    margin-bottom: 0;
     text-align: center;
   }
 
