--- a/source/style.css
+++ b/source/style.css
@@ -73,10 +73,11 @@ main section.section-3 {
 }
 
 main section.section-2 {
-  background-color: rgb(48, 48, 50);
+  background-color: rgb(0, 0, 65);
 }
 
-main h2 {
+main section.section-1 h2,
+main section.section-3 h2 {
   color: rgba(0, 0, 0, 0.7);
   font-size: 36px;
   font-weight: 900;
@@ -85,13 +86,31 @@ main h2 {
   text-transform: uppercase;
 }
 
-main h3 {
+main section.section-2 h2 {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 36px;
+  font-weight: 900;
+  letter-spacing: 10px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+main section.section-1 h3,
+main section.section-3 h3 {
   color: rgb(0, 0, 0);
   font-size: 18px;
   font-weight: 700;
 }
 
-.main-grid-1 {
+main section.section-2 h3.sub-heading {
+  color: rgba(255, 255, 255, 0.95);
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-align: center;
+}
+
+.main-grid-2-columns {
   display: grid;
   grid-column-gap: 20px;
   grid-row-gap: 50px;
@@ -99,19 +118,63 @@ main h3 {
   grid-template-columns: 1fr 1fr;
 }
 
-.main-grid-1 div {
+.main-grid-2-columns div {
   display: block;
   margin: 0 auto;
 }
 
-.main-grid-1 img {
+.main-grid-2-columns img {
   max-width: 450px;
 }
 
-.main-grid-1 p {
+.main-grid-2-columns p {
   color: rgba(0, 0, 0, 0.7);
   font-size: 16px;
   line-height: 1.5;
+}
+
+.main-grid-3-columns {
+  display: grid;
+  grid-column-gap: 30px;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 50px 100px;
+}
+
+.main-grid-3-columns .card {
+  background: rgb(255, 255, 255);
+  border-radius: 4px;
+  max-width: 300px;
+  padding: 24px;
+}
+
+.card .sub-grid-2-columns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.sub-grid-2-columns .sub-grid-content iframe,
+.sub-grid-2-columns .sub-grid-content img {
+  aspect-ratio: 4/3;
+  max-width: 100%;
+}
+
+.card h3,
+.card h4 {
+  margin-bottom: 0;
+}
+
+.card h3 {
+  font-size: 20px;
+}
+
+.card h4 {
+  font-size: 12px;
+  margin-top: 30px;
+}
+
+.card p {
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 16px;
 }
 
 footer {
@@ -156,10 +219,21 @@ div.footer-grid div {
 }
 
 @media (max-width: 1250px) {
-  .main-grid-1 {
+  .main-grid-2-columns {
     grid-template-columns: 1fr;
     grid-column-gap: 0;
     margin: 0 auto;
+  }
+
+  .main-grid-3-columns {
+    grid-template-columns: 1fr;
+    grid-column-gap: 0;
+    grid-row-gap: 30px;
+    margin: 0 auto;
+  }
+
+  .main-grid-3-columns .card {
+    max-width: 100%;
   }
 }
 
@@ -187,11 +261,11 @@ div.footer-grid div {
     font-size: 28px;
   }
 
-  .main-grid-1 {
+  .main-grid-2-columns {
     padding: 20px 40px;
   }
 
-  .main-grid-1 p {
+  .main-grid-2-columns p {
     margin-bottom: 0;
   }
 
@@ -205,7 +279,7 @@ div.footer-grid div {
 }
 
 @media (max-width: 650px) {
-  .main-grid-1 img {
+  .main-grid-2-columns img {
     max-width: 350px;
   }
 }
@@ -215,26 +289,26 @@ div.footer-grid div {
     padding: 20px;
   }
 
-  .main-grid-1 {
+  .main-grid-2-columns {
     grid-row-gap: 20px;
   }
 
-  .main-grid-1 img {
+  .main-grid-2-columns img {
     max-width: 300px;
   }
 }
 
 @media (max-width: 440px) {
-  .main-grid-1 {
+  .main-grid-2-columns {
     padding: 0;
   }
 
-  .main-grid-1 h3 {
+  .main-grid-2-columns h3 {
     margin-bottom: 0;
     text-align: center;
   }
 
-  .main-grid-1 p {
+  .main-grid-2-columns p {
     display: none;
   }
 }
